--- a/package.json
+++ b/package.json
@@ -1,34 +1,31 @@
 {
 	"name": "time-tracker",
 	"version": "1.0.0",
-	"type": "module",
-	"main": "index.js",
+	"main": "./dist/main.js",
 	"scripts": {
 		"lint": "eslint 'src/**/*.{js,ts}'",
 		"format": "prettier --write 'src/**/*.{js,ts,json,html}'",
 		"build": "tsc",
-		"start": "npm run build && electron .",
-		"dev": "nodemon --watch src --ext ts,js --ignore src/**/*.test.ts --exec ts-node ./src/main.ts"
+		"start": "npm run build && electron ."
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"description": "",
 	"dependencies": {
-		"electron": "^32.1.2"
+		"electron": "^32.1.2",
+		"uuid": "^10.0.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.11.1",
-		"@types/electron": "^1.4.38",
 		"@types/node": "^22.7.4",
+		"@types/uuid": "^10.0.0",
 		"@typescript-eslint/eslint-plugin": "^8.8.0",
 		"@typescript-eslint/parser": "^8.8.0",
 		"eslint": "^9.11.1",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.2.1",
-		"nodemon": "^3.1.7",
 		"prettier": "^3.3.3",
-		"ts-node": "^10.9.2",
 		"typescript": "^5.6.2",
 		"typescript-eslint": "^8.8.0"
 	}
