--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"lint": "eslint 'src/**/*.{js,ts}'",
 		"format": "prettier --write 'src/**/*.{js,ts,json,html}'",
-		"build": "tsc",
+		"build": "tsc && webpack",
 		"start": "npm run build && electron ."
 	},
 	"keywords": [],
@@ -27,7 +27,10 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.2.1",
 		"prettier": "^3.3.3",
+		"ts-loader": "^9.5.1",
 		"typescript": "^5.6.2",
-		"typescript-eslint": "^8.8.0"
+		"typescript-eslint": "^8.8.0",
+		"webpack": "^5.95.0",
+		"webpack-cli": "^5.1.4"
 	}
 }
