--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
 	"description": "",
 	"dependencies": {
 		"electron": "^32.1.2",
-		"uuid": "^10.0.0"
+		"uuid": "^10.0.0",
+		"vue": "^3.5.12",
+		"vue-loader": "^17.4.2",
+		"vue-template-compiler": "^2.7.16"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.11.1",
