--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
 		"electron": "^32.1.2",
 		"uuid": "^10.0.0",
 		"vue": "^3.5.12",
-		"vue-loader": "^17.4.2",
 		"vue-template-compiler": "^2.7.16"
 	},
 	"devDependencies": {
@@ -26,6 +25,7 @@
 		"@types/uuid": "^10.0.0",
 		"@typescript-eslint/eslint-plugin": "^8.8.0",
 		"@typescript-eslint/parser": "^8.8.0",
+		"@vue/compiler-sfc": "^3.5.12",
 		"eslint": "^9.11.1",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.2.1",
@@ -33,6 +33,7 @@
 		"ts-loader": "^9.5.1",
 		"typescript": "^5.6.2",
 		"typescript-eslint": "^8.8.0",
+		"vue-loader": "^17.4.2",
 		"webpack": "^5.95.0",
 		"webpack-cli": "^5.1.4"
 	}
