--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"electron": "^32.1.2",
 		"uuid": "^10.0.0",
 		"vue": "^3.5.12",
+		"vue-router": "^4.4.5",
 		"vue-template-compiler": "^2.7.16"
 	},
 	"devDependencies": {
