Set up electron

--- a/package.json
+++ b/package.json
@@ -1,21 +1,29 @@
 {
-  "name": "time-tracker",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "vue": "^3.5.12"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^5.1.4",
-    "electron": "^33.2.0",
-    "typescript": "~5.6.2",
-    "vite": "^5.4.10",
-    "vue-tsc": "^2.1.8"
-  }
+	"name": "time-tracker",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"main": "dist-electron/main.js",
+	"scripts": {
+		"dev": "npm-run-all --parallel dev:vue dev:electron",
+		"dev:vue": "vite",
+		"dev:electron": "npm run transpile:electron && cross-env NODE_ENV=development electron .",
+		"build": "vue-tsc -b && vite build",
+		"preview": "vite preview",
+		"transpile:electron": "tsc --project src/electron/tsconfig.json",
+		"dist:win": "npm run transpile:electron && npm run build && electron-builder --win --x64"
+	},
+	"dependencies": {
+		"vue": "^3.5.12"
+	},
+	"devDependencies": {
+		"@vitejs/plugin-vue": "^5.1.4",
+		"cross-env": "^7.0.3",
+		"electron": "^33.2.0",
+		"electron-builder": "^25.1.8",
+		"npm-run-all": "^4.1.5",
+		"typescript": "~5.6.2",
+		"vite": "^5.4.10",
+		"vue-tsc": "^2.1.8"
+	}
 }
