--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"dist:win": "npm run transpile:electron && npm run build && electron-builder --win --x64"
 	},
 	"dependencies": {
-		"vue": "^3.5.12"
+		"vue": "^3.5.12",
+		"vue-router": "^4.4.5"
 	},
 	"devDependencies": {
 		"@vitejs/plugin-vue": "^5.1.4",
