--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"dist:win": "npm run transpile:electron && npm run build && electron-builder --win --x64"
 	},
 	"dependencies": {
+		"electron-store": "^10.0.0",
 		"vue": "^3.5.12",
 		"vue-router": "^4.4.5"
 	},
