--- a/src/electron/tsconfig.json
+++ b/src/electron/tsconfig.json
@@ -4,6 +4,7 @@
 		"target": "ESNext",
 		"module": "NodeNext",
 		"outDir": "../../dist-electron",
-		"skipLibCheck": true
+		"skipLibCheck": true,
+		"types": ["../../types.d.ts"]
 	}
 }
