Implement pinia and task creating method

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	},
 	"dependencies": {
 		"electron-store": "^10.0.0",
+		"pinia": "^2.2.6",
 		"uuid": "^11.0.3",
 		"vue": "^3.5.12",
 		"vue-router": "^4.4.5"
